--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -1,6 +1,7 @@
 # binds
 bind = $mainMod, T, exec, $terminal
 bind = $sS, C, killactive 
+bind = $mainMod, u, exec, 360.sh 252
 
 bind = $mainMod, J, layoutmsg,cyclenext
 bind = $mainMod, K, layoutmsg,cycleprev
