resized browser window

--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -76,8 +76,9 @@ submap=reset
 submap=effects
 bind=,l,exec, flatpak run com.github.wwmm.easyeffects -l 'LoudnessEqualizer'
 bind=,l,submap,reset
-bind=,b,exec, flatpak run com.github.wwmm.easyeffects -l 'my-heavy-bass'
+bind=,b,exec, flatpak run com.github.wwmm.easyeffects -l 'Heavy Bass'
 bind=,b,submap,reset
+bind=,escape,submap,reset 
 submap=reset
 
 submap=games
