--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -61,5 +61,8 @@ windowrule = opacity 1.0 override 1.0 override,^(floorp)$
 windowrulev2 = opacity 1.0 override,class:^(steam)$
 windowrulev2 = opacity 1.0 override,class:^(heroic)$
 
+# resize
+windowrulev2 = size 800 600,class:(Xdg-desktop-portal-gtk),title:(All Files)
+
 # steam
 windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
