--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -1,6 +1,6 @@
 general {
-  gaps_in = 4
-  gaps_out = 10
+  gaps_in = 0
+  gaps_out = 0
   border_size = 0
   cursor_inactive_timeout	= 5
   no_cursor_warps = 0
@@ -9,9 +9,9 @@ general {
 }
 
 decoration {
-  rounding = 20
-  inactive_opacity = 0.4
-  drop_shadow = no
+  rounding = 0
+  inactive_opacity = 0.5
+  drop_shadow = yes
 
   col.shadow = rgba(1a1a1aee)
   blur {
