--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -7,6 +7,6 @@ env = CLUTTER_BACKEND,wayland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 env = WLR_NO_HARDWARE_CURSORS,1
-env = LIBVA_DRIVER_NAME=i965
-env = VDPAU_DRIVER=va_gl
+env = LIBVA_DRIVER_NAME,i965
+env = VDPAU_DRIVER,va_gl
 
