--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -14,10 +14,6 @@ $tt = ^(tt)$
 windowrule = float,$tt
 windowrule = workspace special silent,$tt
 
-$todo = ^(Kuro)$
-windowrule = float,$todo
-windowrule = workspace special silent,$todo
-
 $study = ^(study)$
 windowrule = float,$study
 windowrule = workspace special silent,$study
@@ -44,6 +40,8 @@ binde=,g,exec,pypr toggle edge-gpt
 bind=,g,submap,reset
 binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
+binde=,v,exec,pypr toggle volume
+bind=,v,submap,reset
 binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
 binde=,c,exec,pypr toggle countdown
