--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -44,6 +44,8 @@ bind=$mainMod,e,submap,exec
 submap=exec
 bind=,r,exec,$runner
 bind=,r,submap,reset
+bind=,v,exec,mpvtube.sh
+bind=,v,submap,reset
 bind=,b,exec,$browser
 bind=,b,submap,reset
 bind=,a,exec,waydroid show-full-ui
