--- a/.config/hypr/configs/vars.conf
+++ b/.config/hypr/configs/vars.conf
@@ -1,6 +1,6 @@
 $mainMod = SUPER
 $sS = SUPERSHIFT
 $terminal = alacritty
-$runner = bemenu-run -i
+$runner = wofi --show drun -i
 $browser = firefox
 
