--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -40,7 +40,7 @@ binde=,g,exec,pypr toggle edge-gpt
 bind=,g,submap,reset
 binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
-binde=,v,exec,pypr toggle volume
+binde=,v,exec,pypr toggle whats
 bind=,v,submap,reset
 binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
