--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -42,6 +42,14 @@ binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
 binde=,v,exec,pypr toggle whats
 bind=,v,submap,reset
+binde=,n,exec,pypr toggle notes
+bind=,n,submap,reset
+binde=,h,exec,pypr toggle habit
+bind=,h,submap,reset
+binde=,i,exec,pypr toggle ia
+bind=,i,submap,reset
+binde=,l,exec,pypr toggle stretch
+bind=,l,submap,reset
 binde=,b,exec,pypr toggle btop
 bind=,b,submap,reset
 binde=,c,exec,pypr toggle countdown
@@ -50,8 +58,6 @@ binde=,e,exec,pypr toggle neorg
 bind=,e,submap,reset
 binde=,t,exec,pypr toggle todo
 bind=,t,submap,reset
-binde=,i,exec,pypr toggle noi
-bind=,i,submap,reset
 binde=,o,exec,pypr toggle tt
 bind=,o,submap,reset
 binde=,s,exec,pypr toggle canki
