--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -40,18 +40,20 @@ binde=,g,exec,pypr toggle edge-gpt
 bind=,g,submap,reset
 binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
-binde=,v,exec,pypr toggle whats
-bind=,v,submap,reset
+binde=,w,exec,pypr toggle whats
+bind=,w,submap,reset
 binde=,n,exec,pypr toggle notes
 bind=,n,submap,reset
 binde=,h,exec,pypr toggle habit
 bind=,h,submap,reset
 binde=,i,exec,pypr toggle ia
 bind=,i,submap,reset
+binde=,p,exec,pypr toggle pulse
+bind=,p,submap,reset
 binde=,l,exec,pypr toggle stretch
 bind=,l,submap,reset
-binde=,b,exec,pypr toggle btop
-bind=,b,submap,reset
+binde=,m,exec,pypr toggle btop
+bind=,m,submap,reset
 binde=,c,exec,pypr toggle countdown
 bind=,c,submap,reset
 binde=,e,exec,pypr toggle neorg
