--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -76,10 +76,12 @@ bind=,escape,submap,reset
 submap=reset
 
 submap=effects
-bind=,l,exec, flatpak run com.github.wwmm.easyeffects -l 'LoudnessEqualizer'
+bind=,l,exec, easyeffects -l 'LoudnessEqualizer'
 bind=,l,submap,reset
-bind=,b,exec, flatpak run com.github.wwmm.easyeffects -l 'Heavy Bass'
+bind=,b,exec, easyeffects -l 'Heavy Bass'
 bind=,b,submap,reset
+bind=,p,exec, easyeffects -l 'AAAAAAAaaaaa'
+bind=,p,submap,reset
 bind=,escape,submap,reset 
 submap=reset
 
