--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -66,3 +66,6 @@ windowrulev2 = size 800 600,class:(Xdg-desktop-portal-gtk),title:(All Files)
 
 # steam
 windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
+
+windowrulev2 = group set always,class:(steam)
+windowrulev2 = group set always,class:(heroic)
