changed grp toggle

--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -2,8 +2,8 @@ input {
     kb_layout = us,us, 
     kb_variant = ,intl
     kb_model =
-    kb_options = grp:ctrl_alt_toggle,ctrl:nocaps
     kb_rules =
+    kb_options = grp:alt_space_toggle,ctrl:nocaps
 
     touchpad {
         natural_scroll = no
