changed some rules

--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -1,5 +1,6 @@
 # floating 
 windowrulev2 = float,class:(floating)                                                      # ensure you have defined a floating window class
+windowrulev2 = float,title:(Sign In - Google Accounts — Mozilla Firefox)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
 windowrulev2 = float,class:^(hiit)$
 windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
@@ -58,6 +59,7 @@ windowrule = opacity 1.0 override 1.0 override,^(firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(Brave-browser)$
 windowrule = opacity 1.0 override 1.0 override,^(org.mozilla.firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(floorp)$
+windowrule = opacity 1.0 override 1.0 override,^(mpv)$
 windowrulev2 = opacity 1.0 override,class:^(steam)$
 windowrulev2 = opacity 1.0 override,class:^(heroic)$
 
