--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -1,7 +1,8 @@
 # floating 
 windowrulev2 = float,class:(floating)                                                      # ensure you have defined a floating window class
-windowrulev2 = float,title:(Sign In - Google Accounts — Mozilla Firefox)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
+
+windowrulev2 = size 60% 60%,class:^(firefox)$title:^(File Upload)$
 windowrulev2 = float,class:^(hiit)$
 windowrulev2 = float,class:^(nwg-look)$,title:^(nwg-look)$
 windowrulev2 = float,class:^(safeeyes)$,title:^(Safe Eyes)$
