changed mode key to ctrl

--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -8,7 +8,7 @@ bind = $mainMod, K, layoutmsg,cycleprev
 bind = $mainMod, P, focuscurrentorlast
 bind = $mainMod, C, layoutmsg,swapwithmaster 
 bind = $sS, F, layoutmsg,focusmaster
-bind=SUPER,TAB,workspace,previous
+bind=$mainMod,TAB,workspace,previous
 bind = $sS, V, exec, ankiv.sh
 bind = $sS, M, exec, maps.sh
 
