--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -57,6 +57,7 @@ windowrulev2 = workspace 7 silent,class:^(Waydroid)$
 
 # opacity
 windowrule = opacity 1.0 override 1.0 override,^(firefox)$
+windowrule = opacity 1.0 override 1.0 override,^(mbw_config_linux)$
 windowrule = opacity 1.0 override 1.0 override,^(Brave-browser)$
 windowrule = opacity 1.0 override 1.0 override,^(org.mozilla.firefox)$
 windowrule = opacity 1.0 override 1.0 override,^(floorp)$
@@ -70,5 +71,7 @@ windowrulev2 = size 800 600,class:(Xdg-desktop-portal-gtk),title:(All Files)
 # steam
 windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
 
+# tab layout rules
 windowrulev2 = group set always,class:(steam)
 windowrulev2 = group set always,class:(heroic)
+windowrulev2 = group set always,class:(lutris)
