--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -3,7 +3,7 @@ input {
     kb_variant = ,intl
     kb_model =
     kb_rules =
-    kb_options = grp:alt_space_toggle,ctrl:nocaps
+    kb_options = grp:alt_space_toggle
 
     touchpad {
         natural_scroll = no
