--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -14,6 +14,10 @@ $tt = ^(tt)$
 windowrule = float,$tt
 windowrule = workspace special silent,$tt
 
+$calc = ^(galculator)$
+windowrule = float,$calc
+windowrule = workspace special silent,$calc
+
 $study = ^(study)$
 windowrule = float,$study
 windowrule = workspace special silent,$study
@@ -42,6 +46,8 @@ binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
 binde=,w,exec,pypr toggle whats
 bind=,w,submap,reset
+binde=,c,exec,pypr toggle calc
+bind=,c,submap,reset
 binde=,n,exec,pypr toggle notes
 bind=,n,submap,reset
 binde=,h,exec,pypr toggle habit
@@ -54,8 +60,8 @@ binde=,l,exec,pypr toggle stretch
 bind=,l,submap,reset
 binde=,m,exec,pypr toggle btop
 bind=,m,submap,reset
-binde=,c,exec,pypr toggle countdown
-bind=,c,submap,reset
+binde=,d,exec,pypr toggle countdown
+bind=,d,submap,reset
 binde=,e,exec,pypr toggle neorg
 bind=,e,submap,reset
 binde=,t,exec,pypr toggle todo
