--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -6,6 +6,10 @@ general {
   layout = master
 }
 
+cursor {
+    inactive_timeout = 5
+  }
+
 decoration {
   rounding = 15
   inactive_opacity = 0.5
