--- a/.config/hypr/configs/env.conf
+++ b/.config/hypr/configs/env.conf
@@ -9,4 +9,6 @@ env = XDG_SESSION_DESKTOP,Hyprland
 env = WLR_NO_HARDWARE_CURSORS,1
 env = LIBVA_DRIVER_NAME,i965
 env = VDPAU_DRIVER,va_gl
+env = GTK_IM_MODULE,cedilla
+env = QT_IM_MODULE,cedilla
 
