--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -21,8 +21,10 @@ submap=reset
 submap=window
 bind=,o,togglefloating
 bind=,o,submap,reset
-bind=,f,fullscreen,0
+bind=,f,fullscreen,1
 bind=,f,submap,reset
+bind=,a,fullscreen,0
+bind=,a,submap,reset
 bind=,k,killactive 
 bind=,k,submap,reset
 bind=,b,fullscreen,1
