--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -1,6 +1,7 @@
 # floating 
 windowrulev2 = float,class:(floating)                                                      # ensure you have defined a floating window class
 windowrulev2 = float,class:^(org.kde.polkit-kde-authentication-agent-1)$,title:^(Authentication Required — PolicyKit1 KDE Agent)$
+windowrulev2 = float,class:^(update-system)$
 
 windowrulev2 = size 60% 60%,class:^(firefox)$title:^(File Upload)$
 windowrulev2 = float,class:^(hiit)$
@@ -51,6 +52,7 @@ windowrulev2 = workspace 5 silent,class:^(org.freedesktop.Xwayland)$
 windowrulev2 = workspace 5 silent,class:^(steam)$,title:^(Steam)$
 windowrulev2 = workspace 5 silent,class:^(heroic)$
 windowrulev2 = workspace 5 silent,class:^(steam)$
+windowrulev2 = workspace 5 silent,class:^(xbox-joy)$
 windowrulev2 = workspace 5 silent,class:^(lutris)$
 windowrulev2 = workspace 6 silent,class:^(YouTube Music)$,title:^(YouTube Music)$
 windowrulev2 = workspace 7 silent,class:^(Waydroid)$
@@ -75,3 +77,4 @@ windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
 windowrulev2 = group set always,class:(steam)
 windowrulev2 = group set always,class:(heroic)
 windowrulev2 = group set always,class:(lutris)
+windowrulev2 = group set always,class:(xbox-joy)
