--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -7,6 +7,8 @@ bind = $mainMod, J, layoutmsg,cyclenext
 bind = $mainMod, K, layoutmsg,cycleprev
 bind = $mainMod, P, focuscurrentorlast
 bind = $mainMod, C, layoutmsg,swapwithmaster 
+bind = $mainMod, K,changegroupactive, b
+bind = $mainMod, J,changegroupactive, f
 bind = $sS, F, layoutmsg,focusmaster
 bind=$mainMod,TAB,workspace,previous
 bind = $sS, V, exec, ankiv.sh
