--- a/.config/hypr/configs/input.conf
+++ b/.config/hypr/configs/input.conf
@@ -1,9 +1,10 @@
 input { 
+    follow_mouse = false,
     kb_layout = us,us, 
     kb_variant = ,intl
     kb_model =
     kb_rules =
-    kb_options = grp:alt_space_toggle
+    kb_options = grp:win_space_toggle
 
     touchpad {
         natural_scroll = no
@@ -11,4 +12,3 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 }
-
