--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -72,6 +72,7 @@ windowrulev2 = size 800 600,class:(Xdg-desktop-portal-gtk),title:(All Files)
 
 # steam
 windowrulev2 = float,class:^(steam)$,title:^(Steam Settings)$
+windowrulev2 = float,class:^(Brave-browser)$,title:^(Untitled - Brave)$
 
 # tab layout rules
 windowrulev2 = group set always,class:(steam)
