--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -64,7 +64,7 @@ binde=,d,exec,pypr toggle countdown
 bind=,d,submap,reset
 binde=,e,exec,pypr toggle neorg
 bind=,e,submap,reset
-binde=,t,exec,pypr toggle todo
+binde=,t,exec,pypr toggle task-tui
 bind=,t,submap,reset
 binde=,o,exec,pypr toggle tt
 bind=,o,submap,reset
