--- a/.config/hypr/configs/binds.conf
+++ b/.config/hypr/configs/binds.conf
@@ -13,6 +13,8 @@ bind = $sS, F, layoutmsg,focusmaster
 bind=$mainMod,TAB,workspace,previous
 bind = $sS, V, exec, ankiv.sh
 bind = $sS, M, exec, maps.sh
+bind = $sS, R, exec, hyprctl keyword monitor VGA-1,preferred,auto,1,transform,3
+bind = $sS, S, exec, hyprctl keyword monitor VGA-1,preferred,auto,1,transform,0
 
 bind = $mainMod, PRINT, exec, hyprshot -m window
 bind = $mainMod, y, exec, hyprshot -m output
