--- a/.config/hypr/configs/general.conf
+++ b/.config/hypr/configs/general.conf
@@ -4,11 +4,12 @@ general {
   border_size = 0
 
   layout = master
+  allow_tearing = true
 }
 
 cursor {
-    inactive_timeout = 5
-  }
+  inactive_timeout = 5
+}
 
 decoration {
   rounding = 15
