--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -41,6 +41,16 @@ bind=,r,submap,resize
 bind=,escape,submap,reset 
 submap=reset
 
+submap=pomo
+bind=,s,exec,pymor
+bind=,s,submap,reset
+bind=,l,exec,pymor -l 2
+bind=,l,submap,reset
+bind=,c,exec,pymor -c
+bind=,c,submap,reset
+bind=,escape,submap,reset 
+submap=reset
+
 #exec
 bind=$mainMod,e,submap,exec
 submap=exec
@@ -54,8 +64,6 @@ bind=,a,exec,waydroid show-full-ui
 bind=,a,submap,reset
 bind=,h,exec,alacritty --class floating -e zsh  -c 'clipse $PPID'
 bind=,h,submap,reset
-bind=,p,exec,pymor -l 2
-bind=,p,submap,reset
 bind=,n,exec,dunstctl close-all
 bind=,n,submap,reset
 bind=,l,exec,open_mm.sh
@@ -67,9 +75,11 @@ bind=,t,submap,reset
 bind=,s,submap,studies
 bind=,s,submap,reset
 bind=,g,submap,games
+bind=,p,submap,pomo
 bind=,e,submap,effects
 bind=,escape,submap,reset 
 submap=reset
+
 
 submap=studies
 bind=,m,exec,maps.sh
