--- a/.config/hypr/configs/wrules.conf
+++ b/.config/hypr/configs/wrules.conf
@@ -67,6 +67,8 @@ windowrule = opacity 1.0 override 1.0 override,^(mpv)$
 windowrulev2 = opacity 1.0 override,class:^(steam)$
 windowrulev2 = opacity 1.0 override,class:^(heroic)$
 
+windowrulev2 = immediate, class:^(tf_linux)$
+
 # resize
 windowrulev2 = size 800 600,class:(Xdg-desktop-portal-gtk),title:(All Files)
 
