--- a/.config/hypr/configs/scratchpads.conf
+++ b/.config/hypr/configs/scratchpads.conf
@@ -26,6 +26,10 @@ $task = ^(task-tui)$
 windowrule = float,$task
 windowrule = workspace special silent,$task
 
+$clipse = ^(clipse)$
+windowrule = float,$clipse
+windowrule = workspace special silent,$clipse
+
 $btop = ^(btop)$
 windowrule = float,$btop
 windowrule = workspace special silent,$btop
@@ -40,14 +44,12 @@ windowrule = workspace special silent,$countdown
 
 bind=$mainMod,S,submap,scratchpad
 submap=scratchpad
-binde=,g,exec,pypr toggle edge-gpt
-bind=,g,submap,reset
 binde=,u,exec,pypr toggle term
 bind=,u,submap,reset
 binde=,w,exec,pypr toggle whats
 bind=,w,submap,reset
-binde=,c,exec,pypr toggle calc
-bind=,c,submap,reset
+binde=,g,exec,pypr toggle calc
+bind=,g,submap,reset
 binde=,n,exec,pypr toggle notes
 bind=,n,submap,reset
 binde=,h,exec,pypr toggle habit
@@ -56,6 +58,8 @@ binde=,i,exec,pypr toggle ia
 bind=,i,submap,reset
 binde=,p,exec,pypr toggle pulse
 bind=,p,submap,reset
+binde=,c,exec,pypr toggle clipse
+bind=,c,submap,reset
 binde=,l,exec,pypr toggle stretch
 bind=,l,submap,reset
 binde=,m,exec,pypr toggle btop
