--- a/.config/hypr/configs/submaps.conf
+++ b/.config/hypr/configs/submaps.conf
@@ -1,10 +1,11 @@
+$reset = hyprctl dispatch submap reset && #use a variable to keep things more readable
+$dpatch = hyprctl dispatch
 #actions
+bind=$mainMod,a,exec,sleep 5 && hyprctl dispatch submap reset #2 seconds timeout
 bind=$mainMod,a,submap,action
 submap=action
-bind=,k,killactive
-bind=,k,submap,reset
-bind=,b,exec,killall -SIGUSR2 waybar
-bind=,b,submap,reset
+bind=,k,exec, $reset $dpatch killactive
+bind=,b,exec,$reset killall -SIGUSR2 waybar
 bind=,w,submap,window
 bind=,l,submap,layout
 bind=,escape,submap,reset 
@@ -19,149 +20,92 @@ bind=,escape,submap,reset
 submap=reset
 
 submap=window
-bind=,o,togglefloating
-bind=,o,submap,reset
-bind=,f,fullscreen,1
-bind=,f,submap,reset
-bind=,a,fullscreen,0
-bind=,a,submap,reset
-bind=,k,killactive 
-bind=,k,submap,reset
-bind=,b,fullscreen,1
-bind=,b,submap,reset
-bind=,i,fakefullscreen
-bind=,i,submap,reset
-bind=,l,focuscurrentorlast
-bind=,l,submap,reset
-bind=,s,layoutmsg,swapwithmaster 
-bind=,s,submap,reset
-bind=,m,layoutmsg,focusmaster
-bind=,m,submap,reset
+bind=,o,exec,$reset $dpatch togglefloating
+bind=,b,exec,$reset $dpatch fullscreen 1
+bind=,f,exec,$reset $dpatch fullscreen 0
+bind=,k,exec,$reset $dpatch killactive
+bind=,i,exec,$reset $dpatch fakefullscreen
+bind=,l,exec,$reset $dpatch focuscurrentorlast
+bind=,s,exec,$reset $dpatch swapwithmaster
+bind=,m,exec,$reset $dpatch focusmaster
 bind=,r,submap,resize
 bind=,escape,submap,reset 
 submap=reset
 
 submap=pomo
-bind=,s,exec,pymor
-bind=,s,submap,reset
-bind=,l,exec,pymor -l 2
-bind=,l,submap,reset
-bind=,c,exec,pymor -c
-bind=,c,submap,reset
+bind=,s,exec,$reset pymor
+bind=,l,exec,$reset pymor -l 2
+bind=,c,exec,$reset pymor -c
 bind=,escape,submap,reset 
 submap=reset
 
 #exec
+bind=$mainMod,e,exec,sleep 5 && hyprctl dispatch submap reset #2 seconds timeout
 bind=$mainMod,e,submap,exec
 submap=exec
-bind=,r,exec,$runner
-bind=,r,submap,reset
-bind=,v,exec,mpvtube.sh
-bind=,v,submap,reset
-bind=,b,exec,$browser
-bind=,b,submap,reset
-bind=,a,exec,waydroid show-full-ui
-bind=,a,submap,reset
-bind=,n,exec,dunstctl close-all
-bind=,n,submap,reset
-bind=,l,exec,open_mm.sh
-bind=,l,submap,reset
-bind=,o,exec,wlogout
-bind=,o,submap,reset
-bind=,t,exec,flatpak run xyz.safeworlds.hiit
-bind=,t,submap,reset
+bind=,r,exec,$reset $runner
+bind=,v,exec,$reset mpvtube.sh
+bind=,b,exec,$reset $browser
+bind=,a,exec,$reset waydroid show-full-ui
+bind=,n,exec,$reset dunstctl close-all
+bind=,l,exec,$reset open_mm.sh
+bind=,o,exec,$reset wlogout
 bind=,s,submap,studies
-bind=,s,submap,reset
-bind=,g,submap,games
 bind=,p,submap,pomo
 bind=,e,submap,effects
 bind=,escape,submap,reset 
 submap=reset
 
-
 submap=studies
-bind=,m,exec,maps.sh
-bind=,m,submap,reset
+bind=,m,exec,$reset maps.sh
 bind=,escape,submap,reset 
 submap=reset
 
 submap=effects
-bind=,l,exec, easyeffects -l 'LoudnessEqualizer'
-bind=,l,submap,reset
-bind=,b,exec, easyeffects -l 'Heavy Bass'
-bind=,b,submap,reset
-bind=,p,exec, easyeffects -l 'AAAAAAAaaaaa'
-bind=,p,submap,reset
-bind=,escape,submap,reset 
-submap=reset
-
-submap=games
-bind=,s,exec,steam
-bind=,s,submap,reset
-bind=,l,exec,lutris
-bind=,l,submap,reset
-bind=,h,exec,heroic
-bind=,h,submap,reset
-bind=,d,exec,dsbattery -d
-bind=,d,submap,reset
+bind=,l,exec,$reset easyeffects -l 'LoudnessEqualizer'
+bind=,b,exec,$reset easyeffects -l 'Heavy Bass'
+bind=,p,exec,$reset easyeffects -l 'AAAAAAAaaaaa'
 bind=,escape,submap,reset 
 submap=reset
 
 bind=$mainMod,L,submap,layout
 submap=layout
-bind=,j,layoutmsg,swapnext
-bind=,j,submap,reset
-bind=,k,layoutmsg,swapprev
-bind=,k,submap,reset
-bind=,f,layoutmsg,focusmaster
-bind=,f,submap,reset
-bind=,s,layoutmsg,swapwithmaster
-bind=,s,submap,reset
-bind=,t,togglegroup
-bind=,t,submap,reset
+bind=,j,exec,$reset $dpatch layoutmsg swapnext
+bind=,k,exec,$reset $dpatch layoutmsg swapprev
+bind=,f,exec,$reset $dpatch layoutmsg focusmaster
+bind=,s,exec,$reset $dpatch layoutmsg swapwithmaster
+bind=,t,exec,$reset $dpatch togglegroup
 bind=,escape,submap,reset 
 submap=reset
 
-bind=$mainMod,W,submap,workspace
+bind=$mainMod,w,exec,sleep 3 && hyprctl dispatch submap reset #2 seconds timeout
+bind=$mainMod,w,submap,workspace
 submap=workspace
-bind=,c,workspace,1
-bind=,c,submap,reset
-bind=,b,workspace,2
-bind=,b,submap,reset
-bind=,t,workspace,3
-bind=,t,submap,reset
-bind=,v,workspace,4
-bind=,v,submap,reset
-bind=,g,workspace,5
-bind=,g,submap,reset
-bind=,m,workspace,6
-bind=,m,submap,reset
-bind=,a,workspace,7
-bind=,a,submap,reset
-bind=,catchall,submap,reset
+bind=,c,exec,$reset $dpatch workspace 1
+bind=,b,exec,$reset $dpatch workspace 2
+bind=,t,exec,$reset $dpatch workspace 3
+bind=,v,exec,$reset $dpatch workspace 4
+bind=,g,exec,$reset $dpatch workspace 5
+bind=,m,exec,$reset $dpatch workspace 6
+bind=,a,exec,$reset $dpatch workspace 7
 bind=,escape,submap,reset 
 submap=reset
 
-bind=$mainMod,M,submap,movetoworkspace
+bind=$mainMod,m,exec,sleep 3 && hyprctl dispatch submap reset #2 seconds timeout
+bind=$mainMod,m,submap,movetoworkspace
 submap=movetoworkspace
-bind=,c,movetoworkspace, 1
-bind=,c,submap,reset
-bind=,b,movetoworkspace, 2
-bind=,b,submap,reset
-bind=,t,movetoworkspace, 3
-bind=,t,submap,reset
-bind=,v,movetoworkspace, 4
-bind=,v,submap,reset
-bind=,g,movetoworkspace, 5
-bind=,g,submap,reset
-bind=,m,movetoworkspace, 6
-bind=,m,submap,reset
-bind=,a,movetoworkspace, 7
-bind=,a,submap,reset
+bind=,c,exec,$reset $dpatch movetoworkspace 1
+bind=,b,exec,$reset $dpatch movetoworkspace 2
+bind=,t,exec,$reset $dpatch movetoworkspace 3
+bind=,v,exec,$reset $dpatch movetoworkspace 4
+bind=,g,exec,$reset $dpatch movetoworkspace 5
+bind=,m,exec,$reset $dpatch movetoworkspace 6
+bind=,a,exec,$reset $dpatch movetoworkspace 7
 bind=,escape,submap,reset 
 submap=reset
 
-bind=$mainMod,V,submap,volume 
+bind=$mainMod,v,exec,sleep 2 && hyprctl dispatch submap reset #2 seconds timeout
+bind=$mainMod,v,submap,volume 
 submap=volume
 binde=,K,exec,swayosd-client --output-volume raise
 binde=,J,exec,swayosd-client --output-volume lower
